# deepracer-llm-agent

./: .env.example  .gitignore  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  setup.py
deepracer_llm_agent/: __main__.py  agent.py
deepracer_llm_agent/services/: __init__.py  bedrock_service.py  pricing.py
deepracer_llm_agent/services/bedrock/: __init__.py  base_handler.py  claude_handler.py  llama_handler.py  mistral_handler.py  nova_handler.py
deepracer_llm_agent/utils/: __init__.py  json_extractor.py  logger.py  model_metadata.py
examples/: model_metadata_claude.json  model_metadata_llm.json  model_metadata_mistral.json  model_metadata_nova.json
scripts/: setup.sh
src/: deepracer-agent.ts  index.ts
src/services/: bedrock.ts  pricing.ts
src/services/bedrock/: base-bedrock-service.ts  index.ts
src/services/bedrock/models/: claude-model.ts  mistral-model.ts  model-factory.ts  nova-model.ts
src/services/bedrock/types/: bedrock-types.ts
src/types/: index.ts
src/utils/: aws-config.ts  command-line-parser.ts  imageProcessing.ts  json-extractor.ts  logger.ts  model-metadata.ts  token-logger.ts
tests/: test_agent.py  test_aws.py  test_models.py
