[tool.poetry]
name = "deepracer-llm-agent"
version = "0.1.0"
description = "DeepRacer agent that processes track images using LLMs through AWS Bedrock"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/larsll/deepracer-llm-agent"
packages = [{include = "deepracer_llm_agent"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.0"
pillow = "^10.0.0"
python-dotenv = "^1.0.0"
numpy = "^1.24.0"
pydantic = "^2.0.0"
requests = "^2.31.0"
typing-extensions = "^4.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
deepracer-llm-agent = "deepracer_llm_agent.__main__:main"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"